Added logo images in auto-play carousel
Created the sample logos and added them to the auto-play carousel for the satisfied clients part.  The max-width is also changed and increased.

--- a/index.htm
+++ b/index.htm
@@ -48,33 +48,26 @@
 <!-- Autoplay Carousel -->
 <div class="logo-container">
     <div class="logo-slider">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
-
-        <!-- 
-    <div class="item"><a><img src="" alt=""></a></div>
-    <div class="item"><a><img src="" alt=""></a></div>
-    <div class="item"><a><img src="" alt=""></a></div>
-    <div class="item"><a><img src="" alt=""></a></div>
-    <div class="item"><a><img src="" alt=""></a></div>
-    <div class="item"><a><img src="" alt=""></a></div>
-     -->
+        <div class="item"><a><img src="/img/1.png" alt=""></a></div>
+        <div class="item"><a><img src="/img/2.png" alt=""></a></div>
+        <div class="item"><a><img src="/img/3.png" alt=""></a></div>
+        <div class="item"><a><img src="/img/4.png" alt=""></a></div>
+        <div class="item"><a><img src="/img/5.png" alt=""></a></div>
+        <div class="item"><a><img src="/img/6.png" alt=""></a></div>
+        <div class="item"><a><img src="/img/7.png" alt=""></a></div>
+        <div class="item"><a><img src="/img/8.png" alt=""></a></div>
     </div>
 </div>
 
 <!-- Scripts -->
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script>
         $('.logo-slider').slick({
             slidesToShow: 5,
             slidesToScroll: 1,
             autoplay: true,
-            autoplaySpeed: 3000,
+            autoplaySpeed: 2000,
         });
     </script>
     <script src="/js/navBar.js"></script>
