Added components in About Us Page
Added the components for the About Us Page and arranged the main css file to its chronological order.

--- a/index.htm
+++ b/index.htm
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<!-- Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav id="navBar">
         <a href="index.htm"><img src="img/WeBrand logo1.png" alt="logo" id="logoImage"></a>
 
@@ -25,8 +25,8 @@
         </ul>
     </nav>
 
-<!-- Home -->
-    <div class="container1">
+    <!-- Home Page -->
+    <div class="hero-section">
         <div class="home-container">
             <div class="home-text">
                 <h1>Worry less about building and growing your brand</h1>
@@ -45,21 +45,33 @@
         </div>
     </div>
 
-<!-- Autoplay Carousel -->
-<div class="logo-container">
-    <div class="logo-slider">
-        <div class="item"><a><img src="/img/1.png" alt=""></a></div>
-        <div class="item"><a><img src="/img/2.png" alt=""></a></div>
-        <div class="item"><a><img src="/img/3.png" alt=""></a></div>
-        <div class="item"><a><img src="/img/4.png" alt=""></a></div>
-        <div class="item"><a><img src="/img/5.png" alt=""></a></div>
-        <div class="item"><a><img src="/img/6.png" alt=""></a></div>
-        <div class="item"><a><img src="/img/7.png" alt=""></a></div>
-        <div class="item"><a><img src="/img/8.png" alt=""></a></div>
+    <!-- Autoplay Logo Carousel -->
+    <div class="logo-container">
+        <div class="logo-slider">
+            <div class="item"><a><img src="/img/1.png" alt=""></a></div>
+            <div class="item"><a><img src="/img/2.png" alt=""></a></div>
+            <div class="item"><a><img src="/img/3.png" alt=""></a></div>
+            <div class="item"><a><img src="/img/4.png" alt=""></a></div>
+            <div class="item"><a><img src="/img/5.png" alt=""></a></div>
+            <div class="item"><a><img src="/img/6.png" alt=""></a></div>
+            <div class="item"><a><img src="/img/7.png" alt=""></a></div>
+            <div class="item"><a><img src="/img/8.png" alt=""></a></div>
+        </div>
     </div>
-</div>
 
-<!-- Scripts -->
+    <!-- About Us Page -->
+    <div class="about-container">
+        <div class="about-img">
+            <img src="/img/teamwork.png" alt="">
+        </div>
+
+        <div class="about-text">
+            <h1 id="about-title">About Us</h1>
+            <p id="about-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora accusamus expedita veritatis optio dignissimos temporibus aspernatur? Facere officiis quas quod a debitis at alias reiciendis quam, dignissimos adipisci corrupti odio!</p>
+        </div>
+    </div>
+
+    <!-- Scripts -->
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script>
@@ -68,6 +80,8 @@
             slidesToScroll: 1,
             autoplay: true,
             autoplaySpeed: 2000,
+            pauseOnFocus: false,
+            pauseOnHover: false
         });
     </script>
     <script src="/js/navBar.js"></script>
