Updated the content of About Us page
Added contents in About Us page including the specific target number for the increasing number animation.

--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
 
         <ul>
             <li><a href="#Home">Home</a></li>
-            <li><a href="#About">About</a></li>
+            <li><a href="#About">About Us</a></li>
             <li><a href="#Services">Services</a></li>
             <li><a href="#Contact">Contact</a></li>
         </ul>
@@ -66,8 +66,27 @@
         </div>
 
         <div class="about-text">
-            <h1 id="about-title">About Us</h1>
-            <p id="about-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora accusamus expedita veritatis optio dignissimos temporibus aspernatur? Facere officiis quas quod a debitis at alias reiciendis quam, dignissimos adipisci corrupti odio!</p>
+            <div id="about-title">
+                <h1>About Us</h1>
+            </div>
+
+            <div id="about-content">
+                <p>We are <b>WeBrand</b> and as a branding agency it is our duty to provide high quality services and outputs to our clients.</p>
+            </div>
+
+            <div id="about-secondContent">
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit expedita vel eveniet non, voluptatum perferendis sequi distinctio rem quas quidem earum saepe numquam ipsa doloribus nesciunt, natus delectus quae cumque. Nam distinctio quod velit voluptatibus ducimus dicta ipsum cum, nulla molestias quas maxime magni consectetur facilis magnam? Consectetur, dolore iure.</p>
+            </div>
+
+            <div class="about-numbers">
+                <div id="client-number">
+                    <h1>30+</h1>
+                </div>
+
+                <div id="project-number">
+                    <h1>50+</h1>
+                </div>
+            </div>
         </div>
     </div>
 
