Added more content in about us page
Added the client and project number but has no animation yet.

--- a/index.htm
+++ b/index.htm
@@ -71,20 +71,24 @@
             </div>
 
             <div id="about-content">
-                <p>We are <b>WeBrand</b> and as a branding agency it is our duty to provide high quality services and outputs to our clients.</p>
+                <p>WeBrand provide high quality services and outputs to our clients</p>
             </div>
 
             <div id="about-secondContent">
-                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit expedita vel eveniet non, voluptatum perferendis sequi distinctio rem quas quidem earum saepe numquam ipsa doloribus nesciunt, natus delectus quae cumque. Nam distinctio quod velit voluptatibus ducimus dicta ipsum cum, nulla molestias quas maxime magni consectetur facilis magnam? Consectetur, dolore iure.</p>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit expedita vel eveniet non, voluptatum perferendis sequi distinctio rem quas quidem earum saepe numquam ipsa doloribus nesciunt, natus delectus quae cumque.</p>
             </div>
 
             <div class="about-numbers">
-                <div id="client-number">
-                    <h1>30+</h1>
+                <div class="counter" data-target="50">
+                    0
+                    <h1>Clients</h1>
+                    <p>Local and international who manages small or big businesses</p>
                 </div>
 
-                <div id="project-number">
-                    <h1>50+</h1>
+                <div class="counter" data-target="105">
+                    0
+                    <h1>Projects</h1>
+                    <p>Successful and has huge short and long term impact</p>
                 </div>
             </div>
         </div>
@@ -105,6 +109,7 @@
     </script>
     <script src="/js/navBar.js"></script>
     <script src="/js/fadeEffect.js"></script>
+    <script src="/js/incrementNum.js"></script>
 </body>
 
 </html>
