Added Increment Number Animation
Added some styles in about us section and  the increment number animation.

--- a/index.htm
+++ b/index.htm
@@ -41,7 +41,8 @@
             </div>
         </div>
 
-        <div class="satisfied-text" data-aos="fadeP" data-aos-delay="30" data-aos-duration="650" data-aos-easing="ease">
+        <div class="satisfied-text" data-aos="fadeUp" data-aos-delay="30" data-aos-duration="650"
+            data-aos-easing="ease">
             <h1>Satisfied Clients</h1>
         </div>
     </div>
@@ -80,22 +81,25 @@
                     voluptatum perferendis sequi distinctio rem quas quidem earum saepe numquam ipsa doloribus nesciunt,
                     natus delectus quae cumque.</p>
             </div>
-
-            <div class="about-numbers">
-                <div class="counter" data-target="50">
-                    0
-                    <h1>Clients</h1>
-                    <p>Local and international who manages small or big businesses</p>
+        
+    <!-- Increment Number Animation -->
+            <div class="about-numbers"  id="counter">
+                <div class="clientNum">
+                    <h1 class="counter-value" data-count="50">0</h1>
+                    <h1 id="num-title">Clients</h1>
+                    <p id="num-content">Local and international who manages small or big businesses</p>
                 </div>
 
-                <div class="counter" data-target="105">
-                    0
-                    <h1>Projects</h1>
-                    <p>Successful and has huge short and long term impact</p>
+                <div class="projNum">
+                    <h1 class="counter-value" data-count="105" style="font-family:  'Roboto Condensed', sans-serif;">0</h1>
+                    <h1 id="num-title">Projects</h1>
+                    <p id="num-content">Successful and has huge short and long term impact</p>
                 </div>
             </div>
         </div>
     </div>
+
+
 
     <!-- Scripts -->
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
