pushing from vscode

--- a/index.htm
+++ b/index.htm
@@ -41,8 +41,7 @@
             </div>
         </div>
 
-        <div class="satisfied-text" data-aos="fadeUp" data-aos-delay="30" data-aos-duration="650"
-            data-aos-easing="ease">
+        <div class="satisfied-text" data-aos="fadeUp" data-aos-delay="30" data-aos-duration="650">
             <h1>Satisfied Clients</h1>
         </div>
     </div>
@@ -64,26 +63,26 @@
     <!-- About Us Page -->
     <div class="about-container">
         <div class="about-img">
-            <img src="/img/teamwork.png" alt="">
+            <img src="/img/teamwork.png" alt="" data-aos="fadeLeft" data-aos-delay="100" data-aos-duration="650" data-aos-offset="400">
         </div>
 
         <div class="about-text">
-            <div id="about-title">
+            <div id="about-title" data-aos="fadeUp" data-aos-delay="30" data-aos-duration="650" data-aos-offset="200">
                 <h1>About Us</h1>
             </div>
 
-            <div id="about-content">
+            <div id="about-content" data-aos="fadeRight" data-aos-delay="100" data-aos-duration="650">
                 <p>WeBrand provide high quality services and outputs to our clients</p>
             </div>
 
-            <div id="about-secondContent">
+            <div id="about-secondContent" data-aos="fadeUp" data-aos-delay="100" data-aos-duration="650">
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit expedita vel eveniet non,
                     voluptatum perferendis sequi distinctio rem quas quidem earum saepe numquam ipsa doloribus nesciunt,
                     natus delectus quae cumque.</p>
             </div>
         
-    <!-- Increment Number Animation -->
-            <div class="about-numbers"  id="counter">
+            <!-- Increment Number Animation -->
+            <div class="about-numbers"  id="counter" data-aos="fadeUp" data-aos-duration="650">
                 <div class="clientNum">
                     <h1 class="counter-value" data-count="50">0</h1>
                     <h1 id="num-title">Clients</h1>
@@ -91,7 +90,7 @@
                 </div>
 
                 <div class="projNum">
-                    <h1 class="counter-value" data-count="105" style="font-family:  'Roboto Condensed', sans-serif;">0</h1>
+                    <h1 class="counter-value" data-count="255" style="font-family:  'Roboto Condensed', sans-serif;">0</h1>
                     <h1 id="num-title">Projects</h1>
                     <p id="num-content">Successful and has huge short and long term impact</p>
                 </div>
@@ -119,7 +118,6 @@
         AOS.init({
             once: true,
             mirror: true,
-            offset: 200,
         });
     </script>
     <script src="/js/navBar.js"></script>
